--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,160 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+/* imports */
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+/* general content */
 :root{
+  --color1:#0B66FA;
+  --color2:#2b5aa7;
+  --color3: #fed500;
   --shade1:#111;
   --shade2:#222;
   --shade3:#333;
   --shade4:#444;
-  --shade5:#555;
-  --color1:#00f;
-  --color2:#0cf;
+  --font1:'Balsamiq Sans', cursive;
+  --font2: 'Quicksand', sans-serif;
+  }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--font2);
+}
+* :not(svg){
+  color: #fff;
 }
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--shade4);
+  overflow-x: hidden;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+a{
+  text-decoration: none;
+}
+a:visited{
+  color: #fff;
+}
+/* header section */
+header{
+  width: 100%;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--shade1);
+  box-shadow: 0 5px 10px #000;
+  margin-bottom: 2px;
+}
+#logoContainer div{
+  font-weight: 700;
+  font-family:var(--font1);
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+#logoContainer div>*{
+  color: var(--color1);
+}
+#FlogoL{
+  font-size: 38px;
+  margin-right: 1px;
+}
+#SlogoL{
+  font-size: 35px;
+  left: 100%;
+  bottom: 0px;
+}
+nav{
+  display: flex;
+  align-items: center;
+}
+nav a{
+  color: #fff;
+  font-size: 25px;
+  transition: box-shadow .2s ease-out;
+  padding:12px 1em;
+  display: grid;
+  place-items: center;
+  border-radius: 0 0 2px 2px;
+  position: relative;
+}
+nav a>span{
+  position: absolute;
+  top:0px ;
+  right:0px ;
+  padding: 5px;
+  font: 900 18px var(--font1);
+  color: green;
+}
+nav a:is(:hover ,:focus ,.active){
+  box-shadow: 0 3px 0 var(--color3);
+  background-image: linear-gradient(90deg ,var(--shade1) ,var(--shade3) ,var(--shade1));
+}
+/* main secton */
+main{
+  width: 100%;
+  min-height: 85vh;
+}
+/* general content section */
+.highlight{
+  transition: box-shadow .2s ease-in-out;
+}
+.highlight:focus{
+  box-shadow: 0 0 0 5px var(--color3);
+}
+.OMG{
+  letter-spacing:-8px;
+  font-family: var(--font1);
+  position: absolute;
+  transform: translateY(3px);
+  cursor:default;
+}
+.OMG:is(:hover ,:focus){
+animation: OMGanimation .7s ease-in-out;
+}
+.landingSection{
+  background: url(../public/svgs/blob-haikei.svg) no-repeat ;
+  background-size: cover;
+  width: 100%;
+  min-height: 85vh;
+  padding: 5%;
+}
+.errorMsg{
+  color: red;
+  cursor: pointer;
+}
+.loadingMsg{
+  color: green;
+}
+/* footer section */
+footer{
+  width: 100%;
+  min-height: 15vh;
+  background-color: var(--shade1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@keyframes OMGanimation {
+  0%{
+    letter-spacing:-8px;
+  }
+  50%{
+    letter-spacing:0px;
+  }
+  100%{
+    letter-spacing:-8px;
+  }
+}
